// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Price renders correctly when isDesktopDevice is true 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

.emotion-0 {
  color: #888888;
  font-size: 0.8125rem;
  font-weight: 700;
  line-height: 1;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    font-size: 0.875rem;
  }
}

<div>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-0"
    >
      $12.4k
    </div>
  </div>
</div>
`;

exports[`Price renders correctly when isLoadingPrice is true 1`] = `
.emotion-0 {
  font-size: 0.8125rem;
  font-weight: 700;
  line-height: 1;
  position: absolute;
  left: 50%;
  width: 26px;
  margin-left: -13px;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    width: 30px;
    margin-left: -15px;
  }

  .emotion-0::after {
    height: 10px;
  }
}

.emotion-0::after {
  content: "";
  position: absolute;
  left: 0;
  right: 0;
  top: 2px;
  height: 7px;
  margin: 0 auto;
  -webkit-animation: animation-h2aas6 2s linear infinite;
  animation: animation-h2aas6 2s linear infinite;
  background: linear-gradient(to right,rgba(0,0,0,0.06) 20%,rgba(0,0,0,0.01) 70%,rgba(0,0,0,0.05) 100%);
  bottom: 1px;
  box-shadow: 0 0 1px rgba(0,0,0,0.12);
  border-radius: 4px;
}

<div>
  <div
    className="emotion-0"
  />
</div>
`;

exports[`Price renders correctly when isLowestPrice is true 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

.emotion-0 {
  color: #008600;
  font-size: 0.8125rem;
  font-weight: 700;
  line-height: 1;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    font-size: 0.875rem;
  }
}

<div>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-0"
    >
      $12.4k
    </div>
  </div>
</div>
`;

exports[`Price renders correctly with defaults 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

.emotion-0 {
  color: #888888;
  font-size: 0.8125rem;
  font-weight: 700;
  line-height: 1;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    font-size: 0.875rem;
  }
}

<div>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-0"
    >
      0
    </div>
  </div>
</div>
`;

exports[`Price renders correctly with props 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

.emotion-0 {
  color: #888888;
  font-size: 0.8125rem;
  font-weight: 700;
  line-height: 1;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    font-size: 0.875rem;
  }
}

<div>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-0"
    >
      $12.4k
    </div>
  </div>
</div>
`;
